@@ -71,7 +71,67 @@ enum { CARTRIDGE_UNKNOWN        = -1,
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
 extern int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1];
-extern char *CARTRIDGE_TextDesc[CARTRIDGE_LAST_SUPPORTED + 1];
+
+#define CARTRIDGE_STD_8_DESC         "Standard 8 KB cartridge"
+#define CARTRIDGE_STD_16_DESC        "Standard 16 KB cartridge"
+#define CARTRIDGE_OSS_034M_16_DESC   "OSS two chip 16 KB cartridge (034M)"
+#define CARTRIDGE_5200_32_DESC       "Standard 32 KB 5200 cartridge"
+#define CARTRIDGE_DB_32_DESC         "DB 32 KB cartridge"
+#define CARTRIDGE_5200_EE_16_DESC    "Two chip 16 KB 5200 cartridge"
+#define CARTRIDGE_5200_40_DESC       "Bounty Bob 40 KB 5200 cartridge"
+#define CARTRIDGE_WILL_64_DESC       "64 KB Williams cartridge"
+#define CARTRIDGE_EXP_64_DESC        "Express 64 KB cartridge"
+#define CARTRIDGE_DIAMOND_64_DESC    "Diamond 64 KB cartridge"
+#define CARTRIDGE_SDX_64_DESC        "SpartaDOS X 64 KB cartridge"
+#define CARTRIDGE_XEGS_32_DESC       "XEGS 32 KB cartridge"
+#define CARTRIDGE_XEGS_64_DESC       "XEGS 64 KB cartridge"
+#define CARTRIDGE_XEGS_128_DESC      "XEGS 128 KB cartridge"
+#define CARTRIDGE_OSS_M091_16_DESC   "OSS one chip 16 KB cartridge"
+#define CARTRIDGE_5200_NS_16_DESC    "One chip 16 KB 5200 cartridge"
+#define CARTRIDGE_ATRAX_128_DESC     "Atrax 128 KB cartridge"
+#define CARTRIDGE_BBSB_40_DESC       "Bounty Bob 40 KB cartridge"
+#define CARTRIDGE_5200_8_DESC        "Standard 8 KB 5200 cartridge"
+#define CARTRIDGE_5200_4_DESC        "Standard 4 KB 5200 cartridge"
+#define CARTRIDGE_RIGHT_8_DESC       "Right slot 8 KB cartridge"
+#define CARTRIDGE_WILL_32_DESC       "32 KB Williams cartridge"
+#define CARTRIDGE_XEGS_256_DESC      "XEGS 256 KB cartridge"
+#define CARTRIDGE_XEGS_512_DESC      "XEGS 512 KB cartridge"
+#define CARTRIDGE_XEGS_1024_DESC     "XEGS 1 MB cartridge"
+#define CARTRIDGE_MEGA_16_DESC       "MegaCart 16 KB cartridge"
+#define CARTRIDGE_MEGA_32_DESC       "MegaCart 32 KB cartridge"
+#define CARTRIDGE_MEGA_64_DESC       "MegaCart 64 KB cartridge"
+#define CARTRIDGE_MEGA_128_DESC      "MegaCart 128 KB cartridge"
+#define CARTRIDGE_MEGA_256_DESC      "MegaCart 256 KB cartridge"
+#define CARTRIDGE_MEGA_512_DESC      "MegaCart 512 KB cartridge"
+#define CARTRIDGE_MEGA_1024_DESC     "MegaCart 1 MB cartridge"
+#define CARTRIDGE_SWXEGS_32_DESC     "Switchable XEGS 32 KB cartridge"
+#define CARTRIDGE_SWXEGS_64_DESC     "Switchable XEGS 64 KB cartridge"
+#define CARTRIDGE_SWXEGS_128_DESC    "Switchable XEGS 128 KB cartridge"
+#define CARTRIDGE_SWXEGS_256_DESC    "Switchable XEGS 256 KB cartridge"
+#define CARTRIDGE_SWXEGS_512_DESC    "Switchable XEGS 512 KB cartridge"
+#define CARTRIDGE_SWXEGS_1024_DESC   "Switchable XEGS 1 MB cartridge"
+#define CARTRIDGE_PHOENIX_8_DESC     "Phoenix 8 KB cartridge"
+#define CARTRIDGE_BLIZZARD_16_DESC   "Blizzard 16 KB cartridge"
+#define CARTRIDGE_ATMAX_128_DESC     "Atarimax 128 KB Flash cartridge"
+#define CARTRIDGE_ATMAX_1024_DESC    "Atarimax 1 MB Flash cartridge"
+#define CARTRIDGE_SDX_128_DESC       "SpartaDOS X 128 KB cartridge"
+#define CARTRIDGE_OSS_8_DESC         "OSS 8 KB cartridge"
+#define CARTRIDGE_OSS_043M_16_DESC   "OSS two chip 16 KB cartridge (043M)"
+#define CARTRIDGE_BLIZZARD_4_DESC    "Blizzard 4 KB cartridge"
+#define CARTRIDGE_AST_32_DESC        "AST 32 KB cartridge"
+#define CARTRIDGE_ATRAX_SDX_64_DESC  "Atrax SDX 64 KB cartridge"
+#define CARTRIDGE_ATRAX_SDX_128_DESC "Atrax SDX 128 KB cartridge"
+#define CARTRIDGE_TURBOSOFT_64_DESC  "Turbosoft 64 KB cartridge"
+#define CARTRIDGE_TURBOSOFT_128_DESC "Turbosoft 128 KB cartridge"
+#define CARTRIDGE_ULTRACART_32_DESC  "Ultracart 32 KB cartridge"
+#define CARTRIDGE_LOW_BANK_8_DESC    "Low bank 8 KB cartridge"
+#define CARTRIDGE_SIC_128_DESC       "SIC! 128 KB cartridge"
+#define CARTRIDGE_SIC_256_DESC       "SIC! 256 KB cartridge"
+#define CARTRIDGE_SIC_512_DESC       "SIC! 512 KB cartridge"
+#define CARTRIDGE_STD_2_DESC         "Standard 2 KB cartridge"
+#define CARTRIDGE_STD_4_DESC         "Standard 4 KB cartridge"
+#define CARTRIDGE_RIGHT_4_DESC       "Right slot 4 KB cartridge"
+#define CARTRIDGE_BLIZZARD_32_DESC   "Blizzard 32 KB cartridge"
 
 /* Indicates whether the emulator should automatically reboot (coldstart)
    after inserting/removing a cartridge. (Doesn't affect the piggyback
